--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-color: cyan;
+  background-color: #6a81a8;
   padding-top: 30px;
   padding-bottom: 300px;
 }
@@ -8,39 +8,10 @@ body{
     max-width: 20%;
     max-height: 20%;
     height: auto;
-    width: auto\9; /* ie8 */
+    width: auto\9;
+    margin: 1em;
 }
 
 .container {
   max-width: 1100px;
-}
-
-.jumbotron {
-  text-align: center;
-  min-height: 400px;
-  margin: 20px;
-}
-
-.glyphicon {
-  font-size: 3em;
-  display: block;
-  text-align: center;
-  color: #006;
-}
-
-.carousel-indicators {
-  bottom: 0;
-}
-.carousel-indicators .active {
-  background-color: cyan;
-}
-
-.carousel-indicators li {
-  border-color: black;
-}
-.img-size{
-  margin-left: auto;
-  margin-right: auto;
-  height: 300px;
-  width: auto;
 }
