--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,12 @@ body{
 .container {
   max-width: 1100px;
 }
+
+.center {
+  text-align: center;
+}
+
+#headline {
+  color: white;
+  font-size: 40px;
+}
